--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -274,7 +274,12 @@
     "    def __str__(self):\n",
     "        return \"{} (${})\".forma(self.name, self.prizeMoney)\n",
     "# Write the WOFHumanPlayer class definition (part B) here\n",
-    "\n",
+    "class WOFHumanPlayer(WOFPlayer):\n",
+    "    \n",
+    "    def getMove(category, obscuredPhrase, guessed):\n",
+    "        str = input(self.name + \"has $\"+ str(self.prizeMoney)+ \"/n\" + \", Category:\" + category + \"/n\" + \", Phrases:\" + \"/n\" + obscuredPhrase + \"/n\" + \", Guessed:\" + guessed + \"/n\" + \"Guess a letter, phrase, or type 'exit' or 'pass':\") \n",
+    "        print(str) \n",
+    "        \n",
     "# Write the WOFComputerPlayer class definition (part C) here\n",
     "\n"
    ]
