--- a/Final_project.ipynb
+++ b/Final_project.ipynb
@@ -1,147 +1,95 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The time.sleep(s) function (from the time module) delays execution of the next line of code for s seconds. You’ll find that we can build a little suspense during gameplay with some well-placed delays. The game can also be easier for users to understand if not everything happens instantly."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sleep 2 seconds..\n",
-      "Sleep 3 seconds..\n",
-      "Sleep 4 seconds..\n",
-      "Sleep 5 seconds..\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import time\n",
+    "# Write the WOFPlayer class definition (part A) here\n",
+    "class WOFPlayer:\n",
+    "    \n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "        self.prizeMoney = 0\n",
+    "        self.prizes = []\n",
+    "        \n",
+    "    def addMoney(self,amt):\n",
+    "        self.prizeMoney = self.prizeMoney + amt\n",
+    "    \n",
+    "    def goBankrupt(self):\n",
+    "        self.prizeMoney = 0\n",
+    "    \n",
+    "    def addPrize(self,prize):\n",
+    "        self.prizes.append(prize)\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        return \"{} (${})\".forma(self.name, self.prizeMoney)\n",
+    "# Write the WOFHumanPlayer class definition (part B) here\n",
     "\n",
-    "for x in range(2, 6):\n",
-    "    print('Sleep {} seconds..'.format(x))\n",
-    "    time.sleep(x) # \"Sleep\" for x seconds\n",
-    "print('Done!')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The random module includes several useful methods for generating and using random numbers, including:\n",
+    "class WOFHumanPlayer(WOFPlayer):\n",
+    "    \n",
+    "    def getMove(category, obscuredPhrase, guessed):\n",
+    "        str = input(self.name + \"has $\"+ str(self.prizeMoney)+ \"/n\" + \", Category:\" + category + \"/n\" + \", Phrases:\" + \"/n\" + obscuredPhrase + \"/n\" + \", Guessed:\" + guessed + \"/n\" + \"Guess a letter, phrase, or type 'exit' or 'pass':\") \n",
+    "        print(str) \n",
+    "        \n",
+    "# Write the WOFComputerPlayer class definition (part C) here\n",
     "\n",
-    "- random.randint(min, max) generates a random number between min and max (inclusive)\n",
+    "class WOFComputerPlayer(WOFPlayer):\n",
+    "    \n",
+    "    SORTED_FREQUENCIES = 'ZQXJKVBPYGFWMUCLDRHSNIOATE'\n",
+    "    \n",
+    "    def __init__(self,name,difficulty):\n",
+    "        WOFPlayer.__init__(self,name)\n",
+    "        self.difficulty =  difficulty\n",
+    "        \n",
+    "        \n",
+    "    def smartCoinFlip(self):\n",
+    "        choose = random.randint(1,10)\n",
+    "        if choose > self.difficulty:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False       \n",
+    "                \n",
+    "    def getPossibleLetters(self,guessed):\n",
+    "        lst = []\n",
+    "        if self.prizeMoney > 250:\n",
+    "            for l in LETTERS:\n",
+    "                lst.append(l)\n",
+    "        else:\n",
+    "            for l in LETTERS:\n",
+    "                if l not in VOWELS:\n",
+    "                    lst.append(l)       \n",
+    "        \n",
+    "        return lst\n",
+    "        \n",
+    "    \n",
+    "    def getMove(self,category, obscuredPhrase, guessed):\n",
+    "        lst = self.getPossibleLetters(guessed)\n",
+    "        move = self.smartCoinfFlip()\n",
+    "        \n",
+    "        if len(lst) == 0:\n",
+    "            return 'pass'\n",
+    "        else:\n",
+    "            if move == True:\n",
+    "                for l in self.SORTED_FREQUENCIES:\n",
+    "                        if l in lst:\n",
+    "                            return 1\n",
+    "            elif move == False:\n",
+    "                return random.choice(lst)\n",
+    "         \n",
+    "        \n",
+    "        \n",
+    "import sys\n",
+    "sys.setExecutionLimit(600000) # let this take up to 10 minutes\n",
     "\n",
-    "- random.choice(L) selects a random item from the list L"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Random number between 1 and 10: 5\n",
-      "Random letter: T\n"
-     ]
-    }
-   ],
-   "source": [
-    "import random\n",
-    "\n",
-    "rand_number = random.randint(1, 10)\n",
-    "print('Random number between 1 and 10: {}'.format(rand_number))\n",
-    "\n",
-    "letters = [letter for letter in 'ABCDEFGHIJKLMNOPQRSTUVWXYZ']\n",
-    "rand_letter = random.choice(letters)\n",
-    "print('Random letter: {}'.format(rand_letter))\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "There are also several string methods that we haven’t gone over in detail but will use for this project:\n",
-    "\n",
-    "- .upper() converts a string to uppercase (the opposite is .lower())\n",
-    "- .count(s) counts how many times the string s occurs inside of a larger string\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "HELLO, WORLD! 123\n",
-      "hello, world! 123\n",
-      "3\n",
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "myString = 'Hello, World! 123'\n",
-    "\n",
-    "print(myString.upper()) # HELLO, WORLD! 123\n",
-    "print(myString.lower()) # hello, world! 123\n",
-    "print(myString.count('l')) # 3\n",
-    "\n",
-    "s = 'python is pythonic'\n",
-    "print(s.count('python')) # 2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We’re going to define a few useful methods for you: \n",
-    "\n",
-    "- getNumberBetween(prompt, min, max)) repeatedly asks the user for a number between min and max with the prompt prompt \n",
-    "- spinWheel() simulates spinning the wheel and returns a dictionary with a random prize \n",
-    "- getRandomCategoryAndPhrase() returns a tuple with a random category and phrase for players to guess \n",
-    "- obscurePhrase(phrase, guessed) Given a phrase and a list of guessed letters, returns an obscured version"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'phrases.json'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-10-2e74fd550a4a>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     67\u001b[0m Guessed:  {}\"\"\".format(category, obscuredPhrase, ', '.join(sorted(guessed)))\n\u001b[0;32m     68\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 69\u001b[1;33m \u001b[0mcategory\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mphrase\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mgetRandomCategoryAndPhrase\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m \u001b[0mguessed\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-10-2e74fd550a4a>\u001b[0m in \u001b[0;36mgetRandomCategoryAndPhrase\u001b[1;34m()\u001b[0m\n\u001b[0;32m     39\u001b[0m \u001b[1;31m#     (\"Artist & Song\", \"Whitney Houston's I Will Always Love You\")\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     40\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mgetRandomCategoryAndPhrase\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 41\u001b[1;33m     \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"phrases.json\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     42\u001b[0m         \u001b[0mphrases\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mjson\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mloads\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'phrases.json'"
-     ]
-    }
-   ],
-   "source": [
     "import json\n",
     "import random\n",
     "import time\n",
     "\n",
     "LETTERS = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
+    "VOWELS  = 'AEIOU'\n",
+    "VOWEL_COST  = 250\n",
     "\n",
     "# Repeatedly asks the user for a number between min & max (inclusive)\n",
     "def getNumberBetween(prompt, min, max):\n",
@@ -205,83 +153,147 @@
     "Phrase:   {}\n",
     "Guessed:  {}\"\"\".format(category, obscuredPhrase, ', '.join(sorted(guessed)))\n",
     "\n",
+    "# GAME LOGIC CODE\n",
+    "print('='*15)\n",
+    "print('WHEEL OF PYTHON')\n",
+    "print('='*15)\n",
+    "print('')\n",
+    "\n",
+    "num_human = getNumberBetween('How many human players?', 0, 10)\n",
+    "\n",
+    "# Create the human player instances\n",
+    "human_players = [WOFHumanPlayer(input('Enter the name for human player #{}'.format(i+1))) for i in range(num_human)]\n",
+    "\n",
+    "num_computer = getNumberBetween('How many computer players?', 0, 10)\n",
+    "\n",
+    "# If there are computer players, ask how difficult they should be\n",
+    "if num_computer >= 1:\n",
+    "    difficulty = getNumberBetween('What difficulty for the computers? (1-10)', 1, 10)\n",
+    "\n",
+    "# Create the computer player instances\n",
+    "computer_players = [WOFComputerPlayer('Computer {}'.format(i+1), difficulty) for i in range(num_computer)]\n",
+    "\n",
+    "players = human_players + computer_players\n",
+    "\n",
+    "# No players, no game :(\n",
+    "if len(players) == 0:\n",
+    "    print('We need players to play!')\n",
+    "    raise Exception('Not enough players')\n",
+    "\n",
+    "# category and phrase are strings.\n",
     "category, phrase = getRandomCategoryAndPhrase()\n",
-    "\n",
+    "# guessed is a list of the letters that have been guessed\n",
     "guessed = []\n",
-    "for x in range(random.randint(10, 20)):\n",
-    "    randomLetter = random.choice(LETTERS)\n",
-    "    if randomLetter not in guessed:\n",
-    "        guessed.append(randomLetter)\n",
     "\n",
-    "print(\"getRandomCategoryAndPhrase()\\n -> ('{}', '{}')\".format(category, phrase))\n",
+    "# playerIndex keeps track of the index (0 to len(players)-1) of the player whose turn it is\n",
+    "playerIndex = 0\n",
     "\n",
-    "print(\"\\n{}\\n\".format(\"-\"*5))\n",
+    "# will be set to the player instance when/if someone wins\n",
+    "winner = False\n",
     "\n",
-    "print(\"obscurePhrase('{}', [{}])\\n -> {}\".format(phrase, ', '.join([\"'{}'\".format(c) for c in guessed]), obscurePhrase(phrase, guessed)))\n",
+    "def requestPlayerMove(player, category, guessed):\n",
+    "    while True: # we're going to keep asking the player for a move until they give a valid one\n",
+    "        time.sleep(0.1) # added so that any feedback is printed out before the next prompt\n",
     "\n",
-    "print(\"\\n{}\\n\".format(\"-\"*5))\n",
+    "        move = player.getMove(category, obscurePhrase(phrase, guessed), guessed)\n",
+    "        move = move.upper() # convert whatever the player entered to UPPERCASE\n",
+    "        if move == 'EXIT' or move == 'PASS':\n",
+    "            return move\n",
+    "        elif len(move) == 1: # they guessed a character\n",
+    "            if move not in LETTERS: # the user entered an invalid letter (such as @, #, or $)\n",
+    "                print('Guesses should be letters. Try again.')\n",
+    "                continue\n",
+    "            elif move in guessed: # this letter has already been guessed\n",
+    "                print('{} has already been guessed. Try again.'.format(move))\n",
+    "                continue\n",
+    "            elif move in VOWELS and player.prizeMoney < VOWEL_COST: # if it's a vowel, we need to be sure the player has enough\n",
+    "                    print('Need ${} to guess a vowel. Try again.'.format(VOWEL_COST))\n",
+    "                    continue\n",
+    "            else:\n",
+    "                return move\n",
+    "        else: # they guessed the phrase\n",
+    "            return move\n",
     "\n",
-    "obscured_phrase = obscurePhrase(phrase, guessed)\n",
-    "print(\"showBoard('{}', '{}', [{}])\\n -> {}\".format(phrase, obscured_phrase, ','.join([\"'{}'\".format(c) for c in guessed]), showBoard(phrase, obscured_phrase, guessed)))\n",
     "\n",
-    "print(\"\\n{}\\n\".format(\"-\"*5))\n",
+    "while True:\n",
+    "    player = players[playerIndex]\n",
+    "    wheelPrize = spinWheel()\n",
     "\n",
-    "num_times_to_spin = random.randint(2, 5)\n",
-    "print('Spinning the wheel {} times (normally this would just be done once per turn)'.format(num_times_to_spin))\n",
+    "    print('')\n",
+    "    print('-'*15)\n",
+    "    print(showBoard(category, obscurePhrase(phrase, guessed), guessed))\n",
+    "    print('')\n",
+    "    print('{} spins...'.format(player.name))\n",
+    "    time.sleep(2) # pause for dramatic effect!\n",
+    "    print('{}!'.format(wheelPrize['text']))\n",
+    "    time.sleep(1) # pause again for more dramatic effect!\n",
     "\n",
-    "for x in range(num_times_to_spin):\n",
-    "    print(\"\\n{}\\n\".format(\"-\"*2))\n",
-    "    print(\"spinWheel()\")\n",
-    "    print(spinWheel())\n",
+    "    if wheelPrize['type'] == 'bankrupt':\n",
+    "        player.goBankrupt()\n",
+    "    elif wheelPrize['type'] == 'loseturn':\n",
+    "        pass # do nothing; just move on to the next player\n",
+    "    elif wheelPrize['type'] == 'cash':\n",
+    "        move = requestPlayerMove(player, category, guessed)\n",
+    "        if move == 'EXIT': # leave the game\n",
+    "            print('Until next time!')\n",
+    "            break\n",
+    "        elif move == 'PASS': # will just move on to next player\n",
+    "            print('{} passes'.format(player.name))\n",
+    "        elif len(move) == 1: # they guessed a letter\n",
+    "            guessed.append(move)\n",
     "\n",
+    "            print('{} guesses \"{}\"'.format(player.name, move))\n",
     "\n",
-    "print(\"\\n{}\\n\".format(\"-\"*5))\n",
+    "            if move in VOWELS:\n",
+    "                player.prizeMoney -= VOWEL_COST\n",
     "\n",
-    "print(\"In 2 seconds, will run getNumberBetween('Testing getNumberBetween(). Enter a number between 1 and 10', 1, 10)\")\n",
+    "            count = phrase.count(move) # returns an integer with how many times this letter appears\n",
+    "            if count > 0:\n",
+    "                if count == 1:\n",
+    "                    print(\"There is one {}\".format(move))\n",
+    "                else:\n",
+    "                    print(\"There are {} {}'s\".format(count, move))\n",
     "\n",
-    "time.sleep(2)\n",
+    "                # Give them the money and the prizes\n",
+    "                player.addMoney(count * wheelPrize['value'])\n",
+    "                if wheelPrize['prize']:\n",
+    "                    player.addPrize(wheelPrize['prize'])\n",
     "\n",
-    "print(getNumberBetween('Testing getNumberBetween(). Enter a number between 1 and 10', 1, 10))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "VOWEL_COST = 250\n",
-    "LETTERS = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'\n",
-    "VOWELS = 'AEIOU'\n",
+    "                # all of the letters have been guessed\n",
+    "                if obscurePhrase(phrase, guessed) == phrase:\n",
+    "                    winner = player\n",
+    "                    break\n",
     "\n",
-    "# Write the WOFPlayer class definition (part A) here\n",
-    "class WOFPlayer:\n",
-    "    \n",
-    "    def __init__(self,name):\n",
-    "        self.name = name\n",
-    "        self.prizeMoney = 0\n",
-    "        self.prizes = []\n",
-    "        \n",
-    "    def addMoney(self,amt):\n",
-    "        self.prizeMoney = self.prizeMoney + amt\n",
-    "    \n",
-    "    def goBankrupt(self):\n",
-    "        self.prizeMoney = 0\n",
-    "    \n",
-    "    def addPrize(self,prize):\n",
-    "        self.prizes.append(prize)\n",
-    "    \n",
-    "    def __str__(self):\n",
-    "        return \"{} (${})\".forma(self.name, self.prizeMoney)\n",
-    "# Write the WOFHumanPlayer class definition (part B) here\n",
-    "class WOFHumanPlayer(WOFPlayer):\n",
-    "    \n",
-    "    def getMove(category, obscuredPhrase, guessed):\n",
-    "        str = input(self.name + \"has $\"+ str(self.prizeMoney)+ \"/n\" + \", Category:\" + category + \"/n\" + \", Phrases:\" + \"/n\" + obscuredPhrase + \"/n\" + \", Guessed:\" + guessed + \"/n\" + \"Guess a letter, phrase, or type 'exit' or 'pass':\") \n",
-    "        print(str) \n",
-    "        \n",
-    "# Write the WOFComputerPlayer class definition (part C) here\n",
-    "\n"
+    "                continue # this player gets to go again\n",
+    "\n",
+    "            elif count == 0:\n",
+    "                print(\"There is no {}\".format(move))\n",
+    "        else: # they guessed the whole phrase\n",
+    "            if move == phrase: # they guessed the full phrase correctly\n",
+    "                winner = player\n",
+    "\n",
+    "                # Give them the money and the prizes\n",
+    "                player.addMoney(wheelPrize['value'])\n",
+    "                if wheelPrize['prize']:\n",
+    "                    player.addPrize(wheelPrize['prize'])\n",
+    "\n",
+    "                break\n",
+    "            else:\n",
+    "                print('{} was not the phrase'.format(move))\n",
+    "\n",
+    "    # Move on to the next player (or go back to player[0] if we reached the end)\n",
+    "    playerIndex = (playerIndex + 1) % len(players)\n",
+    "\n",
+    "if winner:\n",
+    "    # In your head, you should hear this as being announced by a game show host\n",
+    "    print('{} wins! The phrase was {}'.format(winner.name, phrase))\n",
+    "    print('{} won ${}'.format(winner.name, winner.prizeMoney))\n",
+    "    if len(winner.prizes) > 0:\n",
+    "        print('{} also won:'.format(winner.name))\n",
+    "        for prize in winner.prizes:\n",
+    "            print('    - {}'.format(prize))\n",
+    "else:\n",
+    "    print('Nobody won. The phrase was {}'.format(phrase))\n"
    ]
   },
   {
